istio/on-demand-cluster/envoyfilter-passthrough.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: patch-hcm-with-ondemand-filter
  namespace: istio-system
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.on_demand
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.on_demand.v3.OnDemand
          odcds:
            source:
              ads: {}
              # apiConfigSource:
              #   apiType: GRPC
              #   grpcServices:
              #   - envoyGrpc:
              #       clusterName: xds-grpc
            timeout: 5s
